Add View Counter

--- a/client/index.html
+++ b/client/index.html
@@ -9,15 +9,23 @@
   </head>
   <body>
     <div id="app">
-      <h1>ChatBot <img height="30px" src="./assets/bot.svg"/></h1>
+      <h1>ChatBot <img height="30px" src="./assets/bot.svg" /></h1>
       <div id="chat_container"></div>
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask anything to me..."></textarea>
+        <textarea
+          name="prompt"
+          rows="1"
+          cols="1"
+          placeholder="Ask anything to me..."
+        ></textarea>
         <button type="submit">
           <img src="assets/send.svg" alt="send btn" />
         </button>
       </form>
     </div>
+    <br>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div style="width: 100vw;" class="elfsight-app-544c60d4-d134-4f06-914d-3930754dcf5f"></div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
