Add View Counter

--- a/client/index.html
+++ b/client/index.html
@@ -23,9 +23,15 @@
         </button>
       </form>
     </div>
-    <br>
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div style="width: 100vw;" class="elfsight-app-544c60d4-d134-4f06-914d-3930754dcf5f"></div>
+    <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+      <img
+        src="https://hitwebcounter.com/counter/counter.php?page=8112071&style=0006&nbdigits=5&type=page&initCount=0"
+        title="Free Counter"
+        alt="web counter"
+        border="0"
+    /></a>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
